verif/test/deca/context/invalid/non-boolean-exp-verif.res
src/test/deca/context/invalid/non-boolean-exp.deca:10:13: Incompatible types for boolean binary operator '&&' between 'int' and 'int'
